K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: platform-depl
spec:
  replicas: 1 #only one instance fro horizonatl scale
  selector: 
    matchLabels: 
      app: platformservice
  template: 
    metadata: 
      labels: 
        app: platformservice
    spec:
      containers: 
        - name: platformservice
          image: fbicsharp/platformservice:latest #dockerhub image


#kubectl apply -f platform-depl.yaml
