K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: commands-depl
spec:
  replicas: 1 #number of instance for scaling
  selector: 
    matchLabels: 
      app: commandsservice
  template: 
    metadata: 
      labels: 
        app: commandsservice
    spec:
      containers: 
        - name: commandsservice
          image: fbicsharp/commandsservice:latest #dockerhub image
---
#clusterip 
apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: commandsservice
  ports: 
  - name: commandsservice
    protocol: TCP
    port: 80
    targetPort: 80





# TESTING AND EXLLANING  SCRIPT 
#minikube start
#1.(lunch deployment) kubectl apply -f commands-depl.yaml
#2.(retive the deployment) kubectl get deployments 
# in this case I configured 3 instances
# NAME            READY   UP-TO-DATE   AVAILABLE   AGE
# platform-depl   3/3     3            3           40m
#3.(get the pod ) kubectl get pod
# Note the is 3 instances under cration when creation il complate thy comes "Running"
# NAME                             READY   STATUS              RESTARTS   AGE
# platform-depl-587675c5b9-2phhm   0/1     ContainerCreating   0          3s
# platform-depl-587675c5b9-tgbt7   0/1     ContainerCreating   0          3s
# platform-depl-587675c5b9-x62pd   0/1     ContainerCreating   0          3s
#if you remove a pod they will be recreated automatically
#4.(delete the deployment by name) kubectl delete deployment platform-depl

#kubectl rollout restart deployment commands-depl
#kubectl rollout restart deployment platform-depl
